fix interface alignment

--- a/src/fragmentarium/ui/SearchForm.sass
+++ b/src/fragmentarium/ui/SearchForm.sass
@@ -2,13 +2,17 @@
   &__wrapper
     .form-group
       flex-wrap: nowrap
+    .btn-toolbar
+      justify-content: center
+      margin-bottom: 1rem
   &__help-col
     display: flex
-    padding: .5em 0 0
+    padding-top: .5em
     align-content: flex-start
     flex-wrap: wrap
     justify-content: flex-end
     max-width: fit-content
+    min-width: 50px
 
 .accordion-border-bottom
   border-bottom: 1px solid rgba(0, 0, 0, 0.125)
